[tool.poetry]
name = "litestar-advanced-api"
version = "0.1.0"
description = "REST API with Advanced Alchemy and LiteStar"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = { extras = ["standard"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
